--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-backend/.venv/include/*
-backend/.venv/Lib/*
-backend/.venv/Scripts/*
-backend/.venv/pyvenv.cfg
-backend/.venv/keys/*
+backend/venv/include/*
+backend/venv/Lib/*
+backend/venv/Scripts/*
+backend/venv/pyvenv.cfg
+backend/venv/keys/*
+backend/venv/keys.py
